--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   </div>
       </section>
 </main>
-<button class="btn btn-primary btn-sm text-center" style="margin-left: 600px"><a class="text-white" href="#top">Back to Top</a></button>
+<button class="btn btn-dark btn-sm text-center" style="margin-left: 600px"><a class="text-white" href="#top">Back to Top</a></button>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   </body>
