--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <br>
     <br>
     <br>
+    <hr>
+    <br>
     <br>
     <br>
     <section id="skills" class="mt-4 p-4">
@@ -64,6 +66,7 @@
       <img class="img" src="javascript.png" alt="javascripticon" width="60" height="60">
     </div>
     </section>
+    <hr>
     <section id="projects" class="mt-4 p-4">
     <!-- my projects -->
     <h1 class="text-danger text-center">My Projects</h1>
@@ -78,9 +81,10 @@
 </div>
 </div>
     </section>
+    <hr>
     <section id="contactme" class="mt-4 py-4">
       <!-- contact me -->
-<h1 class="text-primary text-center">Contact Form</h1>
+<h1 class="text-primary text-center"><u>Contact Form</u></h1>
   <div class="row">
     <div class="col-sm col-md-8>"
       <form>
